# voxatlas

./: .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml
_modules/: index.html
_sources/getting_started/: minimal_example.rst.txt
_static/: custom.css
api/: modules.html
dev/: features.md
developer/: feature_registry.html  pipeline_internals.html  writing_extractors.html
docs/: Makefile  conf.py  index.rst  make.bat  minimal_pipeline.md  requirements.txt
docs/api/: acoustics.rst  config.rst  modules.rst  morphology.rst  syntax.rst
docs/dev/: modules.rst
docs/developer/: writing_extractors.rst
docs/documentation/: index.rst
docs/getting_started/: installation.rst  minimal_example.rst
docs/overview/: architecture.rst  feature_system.rst  pipeline.rst  unit_hierarchy.rst
docs/tutorials/: acoustic_features.rst
documentation/: index.html
examples/: config.minimal.yaml  run_minimal.py
getting_started/: installation.html  minimal_example.html
overview/: architecture.html  feature_system.html  pipeline.html  unit_hierarchy.html
scripts/: build_docs.sh
src/voxatlas/: __init__.py
src/voxatlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/registry/: test_cli_features.py  test_feature_discovery.py  test_feature_registration.py
tutorials/: acoustic_features.html  building_features.html  conversational_features.html  index.html  linguistic_features.html
(+740 files in other folders)
