[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxatlas"
version = "0.1.0"
description = "Modular feature extraction toolkit for conversational speech"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Your Name"}
]

keywords = [
    "speech",
    "phonetics",
    "linguistics",
    "feature extraction",
    "conversation analysis"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "soundfile",
]

# CLI entry point
[project.scripts]
voxatlas = "voxatlas.cli.main:main"


# Optional dependency groups

[project.optional-dependencies]

acoustic = [
    "librosa",
    "parselmouth",
]

syntax = [
    "spacy",
]

semantics = [
    "transformers",
]

dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-mermaid",
]

# setuptools configuration

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


# Development tooling

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = false
